index.css
* {
    box-sizing: border-box;
}

@font-face {
    font-family: poppins;
    src: url(font/Poppins/Poppins-Regular.ttf);
    font-family: ptSerif;
    src: url(font/PT_Serif/PT_Serif-Web-Regular.ttf);
}

.computer-img {
    display: none;
}

.hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/greengregcrop.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}


body {
    font-family: "Open Sans", sans-serif; 
    font-size: 20px;
    line-height: 1.5;
}

main {
    text-align: center;
    font-family: ptSerif;
}
  
footer {
    padding: 1% 1%;
    background-color: black;
    color: white;
    text-align: center;
}



nav {
    font-size: 16px;
    padding: 1% 1%;
    color: white;
    background-color: black;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 10;
    text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000;
}

nav a, footer a {
    font-family: ptSerif;
    color: white;
    text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000;    
}

.nav-name {
    float: left;
}

 
header {
    padding: 25% 2%;
    font-family: poppins;
    background-color: #96858f;
    min-height: 200px;
    color: white;
    text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000;        
}

h1, h2 {
    font-family: poppins;
    text-align: center;
}
  
section {
    min-height: 200px;
    padding: 10% 2%;
    background-color: #96858f;
    color: white;   
}
  
section:nth-child(even) {
    background-color: lightgray;
    color: black;
}

ul.nav-links {
    display: inline;
}

ul.nav-links li {
    list-style-type: none;
    float: right;
    margin-left: 30px;
}


.strike-it {
    text-decoration: line-through;
}

#bio {
    padding: 5% 5%;
    text-align: left;
}

.smaller {
    font-size: 16px;
}

a {
    color: indigo;
}

nav a:hover, footer a:hover {
    color: lightskyblue;
}

#portfolio a:hover {
    color: blue;
}

@media only screen and (min-width: 720px) {
    .mobile-img {
        display: none;
    }
    .computer-img {
        display: block;
        margin: auto;
    }
}

